--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
       <meta name="description" content="Little library HTML, CSS, JS">
       <meta name="keywords" content="HTML,CSS,JS">
       <meta name="author" content="Guilherme Cruz">
-      <title>Plataforma de Curso</title>
-      <link rel="stylesheet" href="css/simple-line-icons.css">
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="css/normalize.css">
+      <title>Little Library HTML, CSS e JS</title>
+      <link rel="stylesheet" href="css/littlelib.css">
       
   </head>
   <body>
-    <div id="app"></div>
-    <script src="/dist/build.js"></script>
+   
   </body>
 </html>
