--- a/index.html
+++ b/index.html
@@ -11,24 +11,11 @@
       
   </head>
   <body>
-    <nav class="main-menu">
+    <nav class="ll-main-menu">
       <ul>
-        <li>
-          <a href="">
-            teste
-          </a>
-        </li>
-        <li>
-          <a href="">
-            teste
-          </a>
-        </li>
-        <li>
-          <a href="">
-            teste
-          </a>
-        </li>
+        
       </ul>
     </nav>
+    <script src="js/littlelib.js"></script>
   </body>
 </html>
