--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
   </head>
   <body>
 
-    <nav class="ll-main-menu"></nav>
+    <nav class="ll-main-menu">
+      <header>
+        <form>
+          <label for="searchMenu">Search on menu</label>
+          <input type="text" name="searchMenu" id="searchMenu">
+        </form>
+      </header>
+    </nav>
     
     <script src="js/littlelib.js"></script>
   </body>
