add array options

--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
   </head>
   <body>
 
-    <nav class="ll-main-menu">
-      <header>
-        <form>
-          <label for="searchMenu">Search on menu</label>
-          <input type="text" name="searchMenu" id="searchMenu">
-        </form>
-      </header>
-    </nav>
+    <nav class="ll-main-menu"></nav>
     
     <script src="js/littlelib.js"></script>
   </body>
