--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
       <meta name="keywords" content="HTML,CSS,JS">
       <meta name="author" content="Guilherme Cruz">
       <title>Little Library HTML, CSS e JS</title>
-      <link rel="stylesheet" href="css/littlelib.css">
+      <style>
+        * { font-family: sans-serif; } 
+        body{ margin: 0; }
+      </style>
+      <link rel="stylesheet" href="css/littlelibMenuHorizontal.css">
       
   </head>
   <body>
