Separated json menu

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
 
     <nav class="ll-main-menu"></nav>
-    
+    <script src="js/jsonMenuExample.js"></script>
     <script src="js/littlelib.js"></script>
   </body>
 </html>
