--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Little library HTML, CSS, JS">
+      <meta name="description" content="Simple Menu JS">
       <meta name="keywords" content="HTML,CSS,JS">
       <meta name="author" content="Guilherme Cruz">
-      <title>Little Library HTML, CSS e JS</title>
+      <title>Simple Menu JS</title>
       <style>
         * { font-family: sans-serif; } 
         body{ margin: 0; }
       </style>
-      <link rel="stylesheet" href="css/littlelibMenuVertical.css">
+      <link rel="stylesheet" href="css/simpleMenuJS.css">
       
   </head>
   <body>
 
-    <nav class="ll-main-menu"></nav>
+    <nav class="simple-menu-js"></nav>
     <script src="js/jsonMenuExample.js"></script>
-    <script src="js/littlelib.js"></script>
+    <script src="js/simpleMenuJS.js"></script>
   </body>
 </html>
